# study-ai-app

./: .gitignore  CLAUDE.md  LICENSE  components.json  index.html  package-lock.json  package.json  signing_key.pem  tailwind.config.js
.github/workflows/: release.yml
.superpowers/brainstorm/1858-1774837884/: .server-stopped  architecture-overview.html  home-page.html  learning-layout.html
docs/superpowers/plans/: 2026-03-30-phase-1-project-scaffold.md  2026-03-31-phase-5-learning-interface.md  2026-04-08-phase-2-config-fix.md  2026-04-08-phase-3-gitee-sync-fix.md  2026-04-08-phase-4-agent-implementation.md  2026-04-08-simplified-auth-implementation.md
docs/superpowers/specs/: 2026-03-30-ai-one-on-one-teaching-design.md  2026-04-08-simplified-auth-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gen_keys.rs  lib.rs  license_gen_main.rs  main.rs
src-tauri/src/commands/: ai.rs  auth.rs  config.rs  database.rs  git.rs  gitee.rs  mod.rs  sync.rs
src-tauri/src/db/: mod.rs  operations.rs  schema.rs
src-tauri/src/services/: ai.rs  config.rs  crypto.rs  default_keys.rs  git_ops.rs  license.rs  machine_id.rs  mod.rs
src/components/admin/: AdminPanel.tsx
src/components/common/: Button.tsx  Card.tsx  Input.tsx  Sidebar.tsx  StartupLoading.tsx  index.ts
src/components/consultant/: ConsultantAgent.css  ConsultantAgent.tsx  index.ts
src/components/setup/: index.ts  (+6 more)
src/hooks/: index.ts  useAI.ts  useAuth.ts  useChat.ts  useConfig.ts  useConsultant.ts  useCourse.ts
src/pages/: Auth.tsx  Consultant.tsx  Home.tsx  Learning.tsx  Settings.tsx  Setup.tsx  index.ts
src/services/: ai.ts  index.ts  storage.ts  tauri.ts
src/stores/: authStore.ts  chatStore.ts  configStore.ts  courseStore.ts  index.ts
src/styles/: global.css  variables.css
src/types/: index.ts
(+9 files in other folders)
