[package]
name = "study-ai-app"
version = "0.1.0"
description = "AI 一对一教学应用"
authors = ["you"]
edition = "2021"
default-run = "study-ai-app"

[lib]
name = "study_ai_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authorization system
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client for Gitee API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[[bin]]
name = "license-gen"
path = "src/license_gen_main.rs"
required-features = []

[[bin]]
name = "gen_keys"
path = "src/gen_keys.rs"
required-features = []
